# 4DGVT

./: .gitignore  CMakeLists.txt  README.md
apps/: CAMOT.cpp  CMakeLists.txt  prop4D.cpp
config/: 4DGVT.cfg  CAMOT.cfg
eval/: eval_single_image_proposals.py  run_evaluation.sh  run_paper_evaluation.sh
eval/kitti_eval/: evaluate_CLEARMOT.py  evaluation_tools.py  mailpy.py  range_analysis_tools.py
eval/oxford_labels/2015-05-29-09-36-29_sub_0006/: postproc_0000000080.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0007/: postproc_0000000318.json  postproc_0000000365.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0010/: postproc_0000000422.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0023/: postproc_0000000152.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0024/: postproc_0000000210.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0031/: postproc_0000000025.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0039/: postproc_0000000105.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0045/: postproc_0000000251.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0047/: postproc_0000000155.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0049/: postproc_0000000300.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0050/: postproc_0000000235.json  postproc_0000000430.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0051/: postproc_0000000226.json  postproc_0000000373.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0052/: postproc_0000000077.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0055/: postproc_0000000191.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0057/: postproc_0000000231.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0060/: postproc_0000000294.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0062/: postproc_0000000087.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0063/: postproc_0000000356.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0065/: postproc_0000000028.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0066/: postproc_0000000017.json  postproc_0000000450.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0067/: postproc_0000000192.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0069/: postproc_0000000020.json  postproc_0000000374.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0070/: postproc_0000000096.json
eval/oxford_labels/2015-05-29-09-36-29_sub_0073/: postproc_0000000278.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0001/: postproc_0000000235.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0006/: postproc_0000000208.json  postproc_0000000349.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0008/: postproc_0000000323.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0009/: postproc_0000000338.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0010/: postproc_0000000234.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0011/: postproc_0000000158.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0013/: postproc_0000000268.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0014/: postproc_0000000121.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0015/: postproc_0000000469.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0016/: postproc_0000000280.json  postproc_0000000433.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0017/: postproc_0000000247.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0018/: postproc_0000000244.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0023/: postproc_0000000203.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0024/: postproc_0000000402.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0032/: postproc_0000000162.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0037/: postproc_0000000409.json  postproc_0000000415.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0038/: postproc_0000000471.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0040/: postproc_0000000371.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0042/: postproc_0000000033.json  postproc_0000000301.json
eval/oxford_labels/2015-07-21-08-26-57_sub_0043/: postproc_0000000160.json
eval/tracking_eval_kitti/: dummy_sha_car_ranges.csv  dummy_sha_pedestrian_ranges.csv  evaluate_CLEARMOT.py  evaluate_tracking_paul_split_train.seqmap  evaluation_tools.py
experimental/: CMakeLists.txt
include/scene_segmentation/: ground_histogram.h  json_prop_tools.h  object_proposal.h  parameters_gop3D.h  scene_filtering.h  scene_segmentation.h  segmentation_visualization.h  utils_segmentation.h
include/tracking/: data_queue.h  dynamics_handler.h  extended_kalman_filter.h  hypothesis.h  kalman_filter.h  multi_object_tracker_base.h  observation.h  qpbo.h  shape_model.h  visualization.h
script/: exec_tracker.sh
src/CAMOT/: CAMOT_dynamics_handler.cpp  CAMOT_dynamics_handler.h  CAMOT_tracker.cpp  CAMOT_tracker.h  QPBO_fnc.cpp  QPBO_fnc.h  batch_proc.cpp  batch_proc.h  data_association.cpp  data_association.h  hypo_export.cpp  hypo_export.h  inference.cpp  inference.h  kalman_filter_const_velocity_const_elevation.cpp  kalman_filter_const_velocity_const_elevation.h  observation_processing_utils.cpp  observation_processing_utils.h  parameters_CAMOT.h  proposal_proc.cpp  proposal_proc.h
src/scene_segmentation/: ground_histogram.cpp  json_prop_tools.cpp  object_proposal.cpp  scene_filtering.cpp  scene_segmentation.cpp  utils_segmentation.cpp
src/sun_utils/: camera.cpp  camera.h  datasets_dirty_utils.cpp  datasets_dirty_utils.h  disparity.cpp  disparity.h  ground_model.cpp  ground_model.h  shared_types.h  utils_bounding_box.cpp  utils_bounding_box.h  utils_common.cpp  utils_common.h  utils_filtering.cpp  utils_filtering.h  utils_flow.cpp  utils_flow.h  utils_io.cpp  utils_io.h  utils_kitti.cpp  utils_kitti.h  utils_observations.cpp  utils_observations.h  utils_pointcloud.cpp  utils_pointcloud.h  utils_visualization.cpp  utils_visualization.h
src/tracking/: data_queue.cpp  extended_kalman_filter.cpp  hypothesis.cpp  kalman_filter.cpp  multi_object_tracker_base.cpp  observation.cpp  qpbo.cpp  shape_model.cpp  visualization.cpp
wrappers/QPBO/: qpbo_solver.cpp  test.py
(+97 files in other folders)
